# cuHE

./: README.md
api/: CMakeLists.txt  DHS.cu  DHS.h  clean_cmake.sh  org_wso2_siddhi_extension_he_api_HomomorphicEncDecService.cpp  org_wso2_siddhi_extension_he_api_HomomorphicEncDecService.h  org_wso2_siddhi_extension_he_api_HomomorphicEncryptionEvaluation.cpp  org_wso2_siddhi_extension_he_api_HomomorphicEncryptionEvaluation.h
cuhe/: CMakeLists.txt
examples/DHS/: CMakeLists.txt
examples/Prince/: CMakeLists.txt
tests/: CMakeLists.txt
